load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/invly/invly
gazelle(
    name = "gazelle",
    prefix = "github.com/invly/invly",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/invly/invly",
    visibility = ["//visibility:private"],
    deps = [
        "//api:go_default_library",
        "//docs:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/swaggo/http-swagger:go_default_library",
    ],
)

go_binary(
    name = "invly",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
