load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["api.go"],
    importpath = "github.com/invly/invly/api",
    visibility = ["//visibility:public"],
    deps = [
        "//status:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["api_test.go"],
    embed = [":go_default_library"],
)
