load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["status.go"],
    importpath = "github.com/invly/invly/status",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["status_test.go"],
    embed = [":go_default_library"],
)
